Bug 346557 - Calligra Sheets crashes when one document is opened twice and one instance is closed
Summary: Calligra Sheets crashes when one document is opened twice and one instance is...
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2015-04-24 11:46 UTC by jebediah.tracks.bugs
Modified: 2016-04-24 12:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace of a similar crash (7.89 KB, text/plain)
2015-05-18 18:33 UTC, Benedikt Geißler
Details
New crash information added by DrKonqi (4.85 KB, text/plain)
2016-04-24 12:48 UTC, Scott Chappell
Details
New crash information added by DrKonqi (4.85 KB, text/plain)
2016-04-24 12:48 UTC, Scott Chappell
Details
New crash information added by DrKonqi (4.83 KB, text/plain)
2016-04-24 12:48 UTC, Scott Chappell
Details
New crash information added by DrKonqi (4.83 KB, text/plain)
2016-04-24 12:48 UTC, Scott Chappell
Details
New crash information added by DrKonqi (4.83 KB, text/plain)
2016-04-24 12:48 UTC, Scott Chappell
Details
New crash information added by DrKonqi (4.83 KB, text/plain)
2016-04-24 12:48 UTC, Scott Chappell
Details
New crash information added by DrKonqi (4.83 KB, text/plain)
2016-04-24 12:48 UTC, Scott Chappell
Details
New crash information added by DrKonqi (4.83 KB, text/plain)
2016-04-24 12:48 UTC, Scott Chappell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jebediah.tracks.bugs 2015-04-24 11:46:46 UTC
Application: calligrasheets (2.9.2)
KDE Platform Version: 4.14.7
Qt Version: 4.8.6
Operating System: Linux 3.19.3-3-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:
1.) Opened a simple ksp file via recent used
2.) Opened the same file via File -> Open Recent
3.) Closed the first instance

-- Backtrace:
Application: Calligra Sheets (calligrasheets), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[KCrash Handler]
#6  0x00007f054f066945 in QObject::disconnect(QObject const*, char const*, QObject const*, char const*) () from /usr/lib/libQtCore.so.4
#7  0x00007f0539e2d32c in Calligra::Sheets::CellToolBase::deactivate() () from /usr/lib/libcalligrasheetscommon.so.14
#8  0x00007f054ddf46ad in KoToolManager::Private::disconnectActiveTool() () from /usr/lib/libflake.so.14
#9  0x00007f054ddf6843 in KoToolManager::Private::switchCanvasData(CanvasData*) () from /usr/lib/libflake.so.14
#10 0x00007f054ddf6f37 in KoToolManager::Private::detachCanvas(KoCanvasController*) () from /usr/lib/libflake.so.14
#11 0x00007f0539e13bbf in Calligra::Sheets::View::~View() () from /usr/lib/libcalligrasheetscommon.so.14
#12 0x00007f0539e13d79 in Calligra::Sheets::View::~View() () from /usr/lib/libcalligrasheetscommon.so.14
#13 0x00007f05506062e6 in KoMainWindow::setRootDocument(KoDocument*, KoPart*, bool) () from /usr/lib/libkomain.so.14
#14 0x00007f055060923a in KoMainWindow::closeEvent(QCloseEvent*) () from /usr/lib/libkomain.so.14
#15 0x00007f054fac0c68 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#16 0x00007f054fe9be93 in QMainWindow::event(QEvent*) () from /usr/lib/libQtGui.so.4
#17 0x00007f054c9e0dc9 in KXmlGuiWindow::event(QEvent*) () from /usr/lib/libkdeui.so.5
#18 0x00007f054fa6d9fc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#19 0x00007f054fa74458 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#20 0x00007f05505e8d57 in KoApplication::notify(QObject*, QEvent*) () from /usr/lib/libkomain.so.14
#21 0x00007f054f052d7d in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#22 0x00007f054fabd4f9 in QWidgetPrivate::close_helper(QWidgetPrivate::CloseMode) () from /usr/lib/libQtGui.so.4
#23 0x00007f054fadc636 in QApplication::x11ClientMessage(QWidget*, _XEvent*, bool) () from /usr/lib/libQtGui.so.4
#24 0x00007f054fae9571 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#25 0x00007f054fb11262 in ?? () from /usr/lib/libQtGui.so.4
#26 0x00007f054bd1c9fd in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#27 0x00007f054bd1cce0 in ?? () from /usr/lib/libglib-2.0.so.0
#28 0x00007f054bd1cd8c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#29 0x00007f054f081e8d in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#30 0x00007f054fb11326 in ?? () from /usr/lib/libQtGui.so.4
#31 0x00007f054f0518d1 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#32 0x00007f054f051c35 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#33 0x00007f054f0571d9 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#34 0x00007f0550c46752 in kdemain () from /usr/lib/libkdeinit4_calligrasheets.so
#35 0x00007f05508c1800 in __libc_start_main () from /usr/lib/libc.so.6
#36 0x0000000000400739 in _start ()

The reporter indicates this bug may be a duplicate of or related to bug 313704.

Possible duplicates by query: bug 313704.

Reported using DrKonqi
Comment 1 Benedikt Geißler 2015-05-18 18:33:11 UTC
Created attachment 92691 [details]
backtrace of a similar crash
Comment 2 Tomas Mecir 2015-05-24 13:45:26 UTC
Git commit a095fc9fec2d152bc07ddd7e27b458cda2ed2ae9 by Tomas Mecir.
Committed on 24/05/2015 at 13:43.
Pushed by mecir into branch 'frameworks'.

Don't access selection during tool deactivation if it's already deleted

M  +1    -0    sheets/part/View.cpp
M  +3    -2    sheets/ui/CellToolBase.cpp

http://commits.kde.org/calligra/a095fc9fec2d152bc07ddd7e27b458cda2ed2ae9
Comment 3 Scott Chappell 2016-04-24 12:48:30 UTC
Created attachment 98555 [details]
New crash information added by DrKonqi

calligrasheets (2.7.4) on KDE Platform 4.10.5 using Qt 4.8.5

- What I was doing when the application crashed:when i selcet view/ new view and have to instances of a document open and then close one of them i get this crash.

-- Backtrace (Reduced):
#6  0xb6cc9ed7 in QObject::disconnect(QObject const*, char const*, QObject const*, char const*) () from /usr/lib/qt/lib/libQtCore.so.4
#7  0xaeed3748 in Calligra::Sheets::CellToolBase::deactivate() () from /usr/lib/libcalligrasheetscommon.so.12
#8  0xb05a2a21 in KoToolManager::Private::disconnectActiveTool() () from /usr/lib/libflake.so.12
#9  0xb05a3c5b in KoToolManager::Private::switchCanvasData(CanvasData*) () from /usr/lib/libflake.so.12
#10 0xb05a430e in KoToolManager::Private::detachCanvas(KoCanvasController*) () from /usr/lib/libflake.so.12
Comment 4 Scott Chappell 2016-04-24 12:48:30 UTC
Created attachment 98557 [details]
New crash information added by DrKonqi

calligrasheets (2.7.4) on KDE Platform 4.10.5 using Qt 4.8.5

- What I was doing when the application crashed:when i selcet view/ new view and have to instances of a document open and then close one of them i get this crash.

-- Backtrace (Reduced):
#6  0xb6cc9ed7 in QObject::disconnect(QObject const*, char const*, QObject const*, char const*) () from /usr/lib/qt/lib/libQtCore.so.4
#7  0xaeed3748 in Calligra::Sheets::CellToolBase::deactivate() () from /usr/lib/libcalligrasheetscommon.so.12
#8  0xb05a2a21 in KoToolManager::Private::disconnectActiveTool() () from /usr/lib/libflake.so.12
#9  0xb05a3c5b in KoToolManager::Private::switchCanvasData(CanvasData*) () from /usr/lib/libflake.so.12
#10 0xb05a430e in KoToolManager::Private::detachCanvas(KoCanvasController*) () from /usr/lib/libflake.so.12
Comment 5 Scott Chappell 2016-04-24 12:48:47 UTC
Created attachment 98560 [details]
New crash information added by DrKonqi

calligrasheets (2.7.4) on KDE Platform 4.10.5 using Qt 4.8.5

- What I was doing when the application crashed: in calligra sheets, if i select view from the top menue and select new view that allows to instances of the same document to be open. When i close either document i get this crash.

-- Backtrace (Reduced):
#6  0xaeed3748 in Calligra::Sheets::CellToolBase::deactivate() () from /usr/lib/libcalligrasheetscommon.so.12
#7  0xb05a2a21 in KoToolManager::Private::disconnectActiveTool() () from /usr/lib/libflake.so.12
#8  0xb05a3c5b in KoToolManager::Private::switchCanvasData(CanvasData*) () from /usr/lib/libflake.so.12
#9  0xb05a430e in KoToolManager::Private::detachCanvas(KoCanvasController*) () from /usr/lib/libflake.so.12
#10 0xb05a4448 in KoToolManager::removeCanvasController(KoCanvasController*) () from /usr/lib/libflake.so.12
Comment 6 Scott Chappell 2016-04-24 12:48:47 UTC
Created attachment 98561 [details]
New crash information added by DrKonqi

calligrasheets (2.7.4) on KDE Platform 4.10.5 using Qt 4.8.5

- What I was doing when the application crashed: in calligra sheets, if i select view from the top menue and select new view that allows to instances of the same document to be open. When i close either document i get this crash.

-- Backtrace (Reduced):
#6  0xaeed3748 in Calligra::Sheets::CellToolBase::deactivate() () from /usr/lib/libcalligrasheetscommon.so.12
#7  0xb05a2a21 in KoToolManager::Private::disconnectActiveTool() () from /usr/lib/libflake.so.12
#8  0xb05a3c5b in KoToolManager::Private::switchCanvasData(CanvasData*) () from /usr/lib/libflake.so.12
#9  0xb05a430e in KoToolManager::Private::detachCanvas(KoCanvasController*) () from /usr/lib/libflake.so.12
#10 0xb05a4448 in KoToolManager::removeCanvasController(KoCanvasController*) () from /usr/lib/libflake.so.12
Comment 7 Scott Chappell 2016-04-24 12:48:47 UTC
Created attachment 98562 [details]
New crash information added by DrKonqi

calligrasheets (2.7.4) on KDE Platform 4.10.5 using Qt 4.8.5

- What I was doing when the application crashed: in calligra sheets, if i select view from the top menue and select new view that allows to instances of the same document to be open. When i close either document i get this crash.

-- Backtrace (Reduced):
#6  0xaeed3748 in Calligra::Sheets::CellToolBase::deactivate() () from /usr/lib/libcalligrasheetscommon.so.12
#7  0xb05a2a21 in KoToolManager::Private::disconnectActiveTool() () from /usr/lib/libflake.so.12
#8  0xb05a3c5b in KoToolManager::Private::switchCanvasData(CanvasData*) () from /usr/lib/libflake.so.12
#9  0xb05a430e in KoToolManager::Private::detachCanvas(KoCanvasController*) () from /usr/lib/libflake.so.12
#10 0xb05a4448 in KoToolManager::removeCanvasController(KoCanvasController*) () from /usr/lib/libflake.so.12
Comment 8 Scott Chappell 2016-04-24 12:48:47 UTC
Created attachment 98563 [details]
New crash information added by DrKonqi

calligrasheets (2.7.4) on KDE Platform 4.10.5 using Qt 4.8.5

- What I was doing when the application crashed: in calligra sheets, if i select view from the top menue and select new view that allows to instances of the same document to be open. When i close either document i get this crash.

-- Backtrace (Reduced):
#6  0xaeed3748 in Calligra::Sheets::CellToolBase::deactivate() () from /usr/lib/libcalligrasheetscommon.so.12
#7  0xb05a2a21 in KoToolManager::Private::disconnectActiveTool() () from /usr/lib/libflake.so.12
#8  0xb05a3c5b in KoToolManager::Private::switchCanvasData(CanvasData*) () from /usr/lib/libflake.so.12
#9  0xb05a430e in KoToolManager::Private::detachCanvas(KoCanvasController*) () from /usr/lib/libflake.so.12
#10 0xb05a4448 in KoToolManager::removeCanvasController(KoCanvasController*) () from /usr/lib/libflake.so.12
Comment 9 Scott Chappell 2016-04-24 12:48:47 UTC
Created attachment 98564 [details]
New crash information added by DrKonqi

calligrasheets (2.7.4) on KDE Platform 4.10.5 using Qt 4.8.5

- What I was doing when the application crashed: in calligra sheets, if i select view from the top menue and select new view that allows to instances of the same document to be open. When i close either document i get this crash.

-- Backtrace (Reduced):
#6  0xaeed3748 in Calligra::Sheets::CellToolBase::deactivate() () from /usr/lib/libcalligrasheetscommon.so.12
#7  0xb05a2a21 in KoToolManager::Private::disconnectActiveTool() () from /usr/lib/libflake.so.12
#8  0xb05a3c5b in KoToolManager::Private::switchCanvasData(CanvasData*) () from /usr/lib/libflake.so.12
#9  0xb05a430e in KoToolManager::Private::detachCanvas(KoCanvasController*) () from /usr/lib/libflake.so.12
#10 0xb05a4448 in KoToolManager::removeCanvasController(KoCanvasController*) () from /usr/lib/libflake.so.12
Comment 10 Scott Chappell 2016-04-24 12:48:50 UTC
Created attachment 98565 [details]
New crash information added by DrKonqi

calligrasheets (2.7.4) on KDE Platform 4.10.5 using Qt 4.8.5

- What I was doing when the application crashed: in calligra sheets, if i select view from the top menue and select new view that allows to instances of the same document to be open. When i close either document i get this crash.

-- Backtrace (Reduced):
#6  0xaeed3748 in Calligra::Sheets::CellToolBase::deactivate() () from /usr/lib/libcalligrasheetscommon.so.12
#7  0xb05a2a21 in KoToolManager::Private::disconnectActiveTool() () from /usr/lib/libflake.so.12
#8  0xb05a3c5b in KoToolManager::Private::switchCanvasData(CanvasData*) () from /usr/lib/libflake.so.12
#9  0xb05a430e in KoToolManager::Private::detachCanvas(KoCanvasController*) () from /usr/lib/libflake.so.12
#10 0xb05a4448 in KoToolManager::removeCanvasController(KoCanvasController*) () from /usr/lib/libflake.so.12