Don't access selection during tool deactivation if it's already deleted

BUG: 346557